# streaming-data-analysis

./: .gitignore  docker-compose.yml  pyproject.toml
dags/: daily_aggregates.py  pipeline_health_check.py
schemas/: user_created.avsc
services/consumer/: pyproject.toml
services/consumer/src/consumer/: config.py  main.py  quality.py  schema.py
services/producer/: pyproject.toml
services/producer/src/producer/: config.py  main.py  schema.py
