[project]
name = "consumer"
version = "0.1.0"
description = "Spark Structured Streaming job: Kafka -> Postgres, with DLQ routing for invalid records"
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.1",
    "requests>=2.32",
    "pydantic-settings>=2.5",
    "streaming-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consumer"]

[tool.uv.sources]
streaming-common = { workspace = true }
