[project]
name = "producer"
version = "0.1.0"
description = "Continuously streams user-created events into Kafka, schema-validated via Schema Registry"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka==2.3.0",
    "fastavro>=1.9",
    "requests>=2.32",
    "pydantic-settings>=2.5",
    "streaming-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/producer"]

[tool.uv.sources]
streaming-common = { workspace = true }
